@@ -1299,9 +1299,10 @@ pure_expr *pure_catch(pure_expr *h, pure_expr *x)
     size_t m = x->data.clos->m;
     assert(x->data.clos->local || m == 0);
     pure_expr **env = 0;
+    size_t oldsz = interp.sstk_sz;;
     if (m>0) {
       // construct a stack frame
-      size_t sz = interp.sstk_sz;;
+      size_t sz = oldsz;
       resize_sstk(interp.sstk, interp.sstk_cap, sz, m+1);
       pure_expr **sstk = interp.sstk; env = sstk+sz+1;
       sstk[sz++] = 0;
@@ -1324,7 +1325,7 @@ pure_expr *pure_catch(pure_expr *h, pure_expr *x)
     }
     checkstk(test);
     // Push an exception.
-    pure_exception ex; ex.e = 0; ex.sz = interp.sstk_sz;
+    pure_exception ex; ex.e = 0; ex.sz = oldsz;
     interp.estk.push_front(ex);
     // Call the function now. Catch exceptions generated by the runtime.
     if (setjmp(interp.estk.front().jmp)) {
